# shook

./: .gitignore  Cargo.toml  build.rs  default_help.yaml  default_help.yml  docker-compose.yml  nginx.conf
shook/: Cargo.toml  Dockerfile
shook/src/: another_viewer.rs  builtin.rs  config.rs  crates.rs  lib.rs  local.rs  main.rs  user_defined.rs  what_song.rs
shook_brain/: .gitignore
shook_brain/src/: main.rs
shook_brain_make/: Cargo.toml
shook_brain_make/src/: main.rs
shook_brain_serve/: Cargo.toml  Dockerfile
shook_brain_serve/src/: handlers.rs  lib.rs  main.rs  managed.rs  messaging.rs  request.rs
shook_config/: Cargo.toml
shook_config/src/: ephemeral.rs  lib.rs  secret.rs
shook_core/: Cargo.toml
shook_core/src/: args.rs  config.rs  format.rs  help.rs  lib.rs  message.rs  render.rs  state.rs  testing.rs
shook_core/src/callable/: binding.rs  mod.rs
shook_helix/: Cargo.toml
shook_helix/src/: client.rs  config.rs  data.rs  lib.rs  oauth.rs
shook_local/: Cargo.toml
shook_local/src/: lib.rs
shook_markov/: Cargo.toml
shook_markov/src/: brain.rs  set.rs  token.rs
shook_twilight/: Cargo.toml
shook_twilight/src/: config.rs  lib.rs  message.rs  state.rs
shook_twitch/: Cargo.toml
shook_twitch/src/: bot.rs  config.rs  connection.rs  lib.rs  message.rs  types.rs
shook_what_song/: Cargo.toml  Dockerfile
shook_what_song/addon/: background.js
shook_what_song/src/: helpers.rs  history.rs  main.rs
shook_what_song/src/spotify/: handlers.rs  mod.rs  state.rs
shook_what_song/src/youtube/: client.rs  handlers.rs  mod.rs  state.rs
src/: args.rs  binding.rs  callable.rs  config.rs  discord.rs  help.rs  lib.rs  main.rs  message.rs  persist.rs  queue.rs  render.rs  state.rs  testing.rs
src/callable/: binding.rs  command.rs  dispatch.rs  group.rs  mod.rs  wrap.rs
src/discord/: handler.rs  message.rs  mod.rs
src/helix/: client.rs  emote_map.rs  mod.rs
src/persist/: ext.rs  format.rs  json.rs  lexpr.rs  mod.rs  persist_ext.rs  ron.rs  toml.rs  yaml.rs
src/twilight/: mod.rs
src/twitch/: bot.rs  connection.rs  message.rs  mod.rs  parser.rs  tags.rs
