[package]
name = "shook"
version = "0.1.0"
edition = "2021"

[dependencies]
alto_logger     = "0.3.7"
anyhow          = "=1.0.59"
async-trait     = "0.1.57"
indoc = "1.0.7"
log             = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
ron = "0.7.1"
rspotify = { version = "0.11.5", features = ["cli"] }
serde           = { version = "1.0.142", features = ["derive"] }
serde-lexpr = "0.1.2"
serde_json      = "1.0.83"
serde_yaml      = "0.9.4"
serenity        = "0.11.5"
simple_env_load = "0.2.0"
time            = { version = "0.3.12", features = ["local-offset"] }
tokio           = { version = "1.20.1", features = ["fs", "rt", "sync", "io-util", "net", "macros"] }
tokio-stream    = { version = "0.1.9", features = ["sync"] }
toml = "0.5.9"

what_theme   = { git = "https://github.com/museun/what_theme", version = "0.1.0" }
