[package]
name = "shook"
version = "0.1.0"
edition = "2021"

default-run = "shook"
build = "build.rs"

[dependencies]
alto_logger      = "0.3.7"
anyhow           = "1.0.62"
async-trait      = "0.1.57"
fastrand         = "1.8.0"
heck             = "0.4.0"
indoc            = "1.0.7"
log              = "0.4.17"
once_cell        = "1.13.1"
regex            = "1.6.0"
reqwest          = { version = "0.11.11", features = ["json"] }
rspotify         = { version = "0.11.5", features = ["cli"] }
serde            = { version = "1.0.143", features = ["derive"] }
serde_json       = "1.0.83"
simple_env_load  = "0.2.0"
time             = { version = "0.3.13", features = ["local-offset", "formatting"] }
tokio            = { version = "1.20.1", features = ["fs", "rt", "sync", "io-util", "net", "macros", "test-util"] }
tokio-stream     = { version = "0.1.9", features = ["sync"] }
twilight-gateway = { version = "0.13.0", default-features = false, features = ["native"] }
twilight-http    = { version = "0.13.0", default-features = false, features = ["native"] }
twilight-model   = "0.13.0"
url              = "2.2.2"

fastrand_ext     = { git = "https://github.com/museun/fastrand_ext", version = "0.1.0" }
what_theme       = { git = "https://github.com/museun/what_theme", version = "0.1.0" }
persist          = { git = "https://github.com/museun/persist", version = "0.1.0", features = ["tokio", "json", "yaml"] }

shook_config     = { path = "../shook_config" }
shook_core       = { path = "../shook_core" }
shook_helix      = { path = "../shook_helix" }
shook_local      = { path = "../shook_local" }
shook_twilight   = { path = "../shook_twilight" }
shook_twitch     = { path = "../shook_twitch" }

[dev-dependencies]
insta = "1.18.2"

[build-dependencies]
indoc = "1.0.7"
time = { version = "0.3.13", features = ["local-offset", "formatting"] }
