[package]
name = "shook_brain_make"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = "1.0.62"
bincode      = "1.3.3"
gumdrop      = "0.8.1"
log          = "0.4.17"
shook_markov = { git = "https://github.com/museun/shook" }
zstd         = "0.11.2"
