[package]
name    = "shook_brain_serve"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
shook_markov = { path = "../shook_markov" }

alto_logger       = "0.3.7"
anyhow            = "1.0.60"
axum              = "0.5.13"
bincode           = "1.3.3"
fastrand          = "1.8.0"
gumdrop           = "0.8.1"
log               = "0.4.17"
serde             = { version = "1.0.142", features = ["derive"] }
simple_env_load   = "0.2.0"
tokio             = { version = "1.20.1", features = ["rt", "sync", "fs", "io-util", "macros"] }
tower-http        = { version = "0.3.4", features = ["auth"] }
zstd              = "0.11.2"
