[package]
name = "shook_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
heck = "0.4.0"
log = "0.4.17"
serde = "1.0.143"
time = "0.3.13"
tokio = "1.20.1"
tokio-stream = "0.1.9"

persist = { git = "https://github.com/museun/persist", version = "0.1.0", features = ["tokio", "json", "yaml"] }
