[package]
name = "shook_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.59"
gumdrop = "0.8.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["net", "macros", "rt", "io-util", "io-std"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
