[package]
name = "shook_local"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1.0.62"
gumdrop      = "0.8.1"
log          = "0.4.17"
serde        = { version = "1.0.143", features = ["derive"] }
serde_json   = "1.0.83"
tokio        = { version = "1.20.1", features = ["net", "macros", "rt", "io-util", "io-std"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }

shook_core   = { git = "https://github.com/museun/shook" }
shook_twitch = { git = "https://github.com/museun/shook" }
