[package]
name = "shook_markov"
version = "0.1.0"
edition = "2021"


[dependencies]
fastrand     = "1.8.0"
fastrand_ext = { git = "https://github.com/museun/fastrand_ext", version = "0.1.0" }
hashbrown    = { version = "0.12.3", features = ["serde"] }
serde        = { version = "1.0.143", features = ["derive"] }
