[package]
name = "shook_twilight"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.61"
log = "0.4.17"
serde = "1.0.143" # do we even use this?
tokio = "1.20.1"
tokio-stream = "0.1.9"
twilight-gateway = "0.12.1"
twilight-http = "0.12.2"
twilight-model = "0.12.3"

shook_core = { path = "../shook_core" }
shook_config = { path = "../shook_config" }
