[package]
name = "shook_what_song"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alto_logger = "0.3.7"
anyhow = "1.0.62"
axum = "0.5.15"
gumdrop = "0.8.1"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
simple_env_load = "0.2.0"
tokio = { version = "1.20.1", features = ["macros", "rt", "fs", "io-util", "net"] }
tower-http = { version = "0.3.4", features = ["auth"] }
